# fast-image-rotation

./: .gitignore  CMakeLists.txt  README.md  Shear_rotation.cpp  ass.cpp  dlr.cpp  dlr.py  dlr2.cpp  dsp_image_rot.cpp  main.cpp  main.ipynb  main_brighter.cpp  main_rotation.cpp  opencv_demo.cpp  original_bread.cpp  parallel_rotation.cpp  proposed algorithm.txt  rotation_copy.cpp  run.py  scheduling_demo.cpp  summary_June_25.xlsx
Codes of sourav/: hermite_rotation_3.cpp  hermite_rotation_4.cpp
PPTS/: DhrubajyotiMandal_22053859.pptx  Sourav Parida_22051032.pptx  SubhadeepBhadra_2205336.pptx
utils/: autoschedule_run.cpp  autoscheduling.cpp  benchmark.cpp  dlr_opencv.cpp  dlr_opencv_sse.cpp  dlr_test.py  hermite.cpp  new_dlr.cpp  opencv_demo.cpp  opencv_demo.py  opencv_warpAffine.cpp  rotate_auto_run.cpp  rotate_auto_schedule.cpp  rotation_h.cpp  shear_rotation.cpp  subhadeep.cpp
